tests/paczka1/small_fuzzy/14638052.err
Error in line 9: 2pDGoMz A900 12,23
Error in line 7: Cu4yeyZqt A900 60,3
Error in line 16: Cu|yeyZqt S257 68,9
